Update Info Page “2020-06-14-about”

--- a/content/infoPages/2020-06-14-about.md
+++ b/content/infoPages/2020-06-14-about.md
@@ -4,7 +4,7 @@ slug: About
 title: About
 featuredImage: 'https://ucarecdn.com/1f312b60-b5e8-4760-ab73-59202225140c/'
 ---
-Corrine Willis is a classically trained vocalist specializing in working with students on singing authentically, freely, and healthily.  She has a degree in music education from the Fredonia School of Music, and is passionate about working with singers of all ages to bring out their true voices.  Through working on vocal weaknesses with customized warmups and strategies which promote good vocal health and singing longevity, Corrine enjoys watching and hearing the growth of her students as they progress.
+Corrine Willis is a classically trained vocalist specializing in working with students on singing authentically, freely, and healthily.  She has a degree in music education with a voice concentration from the Fredonia School of Music, and is passionate about working with singers of all ages to bring out their true voices.  Through working on vocal weaknesses with customized warmups and strategies which promote good vocal health and singing longevity, Corrine enjoys watching and hearing the growth of her students as they progress.
 
    Her vocal approach consists of strengthening the voice using healthy technique, replacing damaging vocal habits with better strategies, and working to elevate each singer’s performance physically, mentally, and emotionally.  Each lesson is customized specifically to what each student needs, and tailor-made to strengthen individual weaknesses in the voice.  Using the tenets of strong breath control, proper understanding of vocal placement, and strong connection throughout the vocal range, she will provide a forty minute vocal lesson which includes customized warm ups, consistent and encouraging verbal feedback, live piano accompaniment, sight reading exercises, repertoire rehearsing, and physical performance suggestions and strategies.  Each singer will also receive a customized “Willis Warmup” series to help supplement his or her vocal instruction.  It will address what the individual student is working on specifically, with appropriate ranges, relevant topics, and exercises.  (Check out the “Willis Warmup” demo series on our links page to get an idea of what they entail.)
 
