Update Info Page “2020-06-14-about”

--- a/content/infoPages/2020-06-14-about.md
+++ b/content/infoPages/2020-06-14-about.md
@@ -2,15 +2,17 @@
 template: DefaultPage
 slug: About
 title: About
-featuredImage: 'https://ucarecdn.com/1f312b60-b5e8-4760-ab73-59202225140c/'
+featuredImage: 'https://ucarecdn.com/8a1ca593-cc46-42ed-879a-99eeb1fe96d2/'
 ---
-Corrine Willis is a classically trained vocalist specializing in working with students on singing authentically, freely, and healthily.  She has a degree in music education with a voice concentration from the Fredonia School of Music, and is passionate about working with singers of all ages to bring out their true voices.  Through working on vocal weaknesses with customized warmups and strategies which promote good vocal health and singing longevity, Corrine enjoys watching and hearing the growth of her students as they progress.
+Corrine Willis is a classically trained vocalist specializing in working with students on singing authentically, freely, and healthily.  She has a Bachelor's degree in music education with a voice concentration from the Fredonia School of Music, a Master's degree in Curriculum & Instruction from SUNY Potsdam, and is passionate about working with singers of all ages to bring out their true voices.  Through working on vocal weaknesses with customized warmups and strategies which promote good vocal health and singing longevity, Corrine enjoys watching and hearing the growth of her students as they progress.
 
    Her vocal approach consists of strengthening the voice using healthy technique, replacing damaging vocal habits with better strategies, and working to elevate each singer’s performance physically, mentally, and emotionally.  Each lesson is customized specifically to what each student needs, and tailor-made to strengthen individual weaknesses in the voice.  Using the tenets of strong breath control, proper understanding of vocal placement, and strong connection throughout the vocal range, she will provide a forty minute vocal lesson which includes customized warm ups, consistent and encouraging verbal feedback, live piano accompaniment, sight reading exercises, repertoire rehearsing, and physical performance suggestions and strategies.  Each singer will also receive a customized “Willis Warmup” series to help supplement his or her vocal instruction.  It will address what the individual student is working on specifically, with appropriate ranges, relevant topics, and exercises.  (Check out the “Willis Warmup” demo series on our links page to get an idea of what they entail.)
 
    While Corrine is most passionate about education, she does enjoy performing as well.  She believes in being a well-rounded musician, and considers herself a “vocal chameleon” as she loves singing in a variety of genres and venues.  Her music career began with her singing in church where she developed her pure tone and clear sound, which was also utilized in her barbershop career.  She sang with the two-time International champion women’s barbershop chorus Northern Blend for seven years as a lead and tenor, where she learned to focus on straight tone singing, blending, and harmonizing, and was afforded the opportunity to work with Bel Canto specialist Debra Lynn, author of “The Bel Canto Buzz”.  This opportunity strengthened Corrine’s approach to breath control and vocal connection, and gave her teaching tools that she still uses to this day.  Corrine also loves jazz music, and has performed at the Clayton Jazz Festival, as well as other local events.  Her most proficient area of expertise is her classical background, and she has performed in operatic productions, as well as many performances locally as a soloist.
 
-   Corrine taught vocal music at General Brown High School for ten years, after which she left her position to be at home with her family.  She is a certified NYSSMA judge, and has had the honor of working with some of the areas best students, preparing many for NYSSMA solos, musical auditions, and collegiate auditions as well.  She has had several students attend the Conference All State festival in Rochester, and several of the students she has had the privilege of working with have been accepted to music and theater programs such as SUNY Fredonia, AMDA, Syracuse University, Berklee, and Buffalo State.  She loves being at home with her two little girls, and she plans on returning to the field of music education someday.
+   Instrumentally, Corrine studied both guitar and piano at a collegiate level.  She has taught classical guitar in the classroom for beginner and intermediate levels for the past ten years, and has given beginner and intermediate piano instruction in the classroom for the past two years.  Corrine has accompanied many concerts, rehearsals, NYSSMA solos for students, and musicals for various local schools.  She has also been an intermittent piano accompanist at St. Mary's Church in Clayton for the past ten years.  She is also an enthusiastic oboe player, and is working on brushing up on her flute, clarinet, and percussion chops.  She has played oboe and percussion for various seasons with the Clayton Community Band.
+
+   Corrine taught vocal music at General Brown High School for ten years, after which she left her position to be at home with her family.  She is a trained NYSSMA judge, and has had the honor of working with some of the areas best students, preparing many for NYSSMA solos, musical auditions, and collegiate auditions as well.  She has had students attend the Conference All State festival in Rochester, and several of the students she has had the privilege of working with have been accepted to music and theater programs such as SUNY Fredonia, AMDA, Syracuse University, Berklee, and Buffalo State.  She loves being at home with her two little girls, and she plans on returning to the field of music education someday.
 
 ![](https://ucarecdn.com/42607c62-ab9d-42e2-8c86-a9f89e97a5d3/-/progressive/yes/-/format/auto/-/resize/200x/#right)
 ![](https://ucarecdn.com/1a52b6f8-068a-46e4-a4b9-1c56328fa3a8/-/progressive/yes/-/format/auto/-/resize/200x/#left)
